# tread

./: .env.example  .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  Caddyfile.localhost  Dockerfile  INSTALLATION.md  Makefile  README.md  cypress.config.ts  dev-requirements.txt  dev.sh  docker-compose.yml  hatch_build.py  i18next-parser.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  run_compose.sh  svelte.config.js
.github/: FUNDING.yaml  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-build.yaml  format-backend.yaml  format-build-frontend.yaml  integration-test.yaml  release-pypi.yaml
tread/: __init__.py  config.py
tread/database/: __init__.py  user.py
tread/jwt/: __init__.py
tread/routes/: api.py  frontend.py  webui.py
tread/templates/: base.html  index.html
