[project]
name = "tread"
version = "0.0.1"
description = "A Flask web app with JWT authentication"
readme = "README.md"
authors = [
  {name = "Jason Lee Miller", email = "jason@thoughtparamters.com"}
]
license = { file = "LICENSE" }
dependencies = [
  "flask",
  "flask-bcrypt",
  "flask-sqlalchemy",
  "flask-wtf",
  "flask-migrate",
  "flask-mail",
  "pyjwt",
  "python-dotenv",
  "psycopg2-binary",
  "requests",
  "unicorn",
]

requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
tread = "tread:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest"]

[tool.hatch.metdata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]  # build a wheel
packages = ["tread"]
exclude = [
  ".dockerignore",
  ".gitignore",
  ".secret_key",
  "dev.sh",
  "requirements.txt",
  "tread.db",
]



